<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dip"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/gps_location"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/in_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/in_view"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/gps_in_view_use"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gps_in_view_use"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/ttff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timetofirstfix"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/in_use"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/in_use"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/bd_in_view_use"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bd_in_view_use"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:typeface="serif" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textSize="20dp"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="180dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp">

        <com.unistrong.demo.gps.SingleView
            android:id="@+id/gps_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp" />

    </FrameLayout>
</LinearLayout>